feat : route get pet by pet id
